# Design-Patterns

./: .gitignore  CMakeLists.txt  README.md
abstract-factory/: README.md  abstractFactory.cpp
adapter/: Adapter.cpp  PowerOutlet_Adapter.cpp  README.md
bridge/: README.md  bridgeGeneric.cpp  bridgePractical.cpp
builder/: Builder_Practical.cpp  README.md  builder_generic.cpp
chain-of-responsibility/: ChainOfResponsibility.cpp  PurchaseApproval.cpp  README.md
command/: Command_Light.cpp  README.md  command-pattern.cpp
composite/: Component.cpp
decorator/: Decorator.cpp
facade/: README.md  facadeExample.cpp  facade_generic.cpp
factory-method/: FactoryMethod.cpp  FactoryMethod_DocumentCreator.cpp  README.md
flyweight/: FlyweightGeneric.cpp  Flyweight_Practical.cpp  README.md
interpreter/: README.md  interpreter_practical.cpp
iterator/: Practical_Iterator_ex.cpp  README.md
mediator/: Practical_Example.cpp  README.md
memento/: README.md  practical-example.cpp
observer/: Observer.cpp  README.md
prototype/: README.md  prototypePractical.cpp  prototype_Generic.cpp
proxy/: README.md  proxy.cpp
singleton/: Singleton.cpp
state/: Practical_State_Design.cpp  README.md
strategy/: README.md  SortStrategyExample.cpp  Strategy.cpp
template-method/: README.md  TemplateMethod.cpp
visitor/: DocumentProcessing.cpp  README.md  Visitor.cpp
